webapp/src/webpage.css
/* bootstrap theme corrects */
.navbar-default {
    background-color: #f5f5f5;
    border-color: #f5f5f5;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
}

.navbar-default .dropdown-menu {
    border: 1px solid transparent;
    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
}

.panel-default {
    border: none;
    -webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
}

.form-control {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
    background-color: #5bc0de;
    border-color: #46b8da;
}

.navbar-default .navbar-nav > li > a {
    color: #444;
}

/* end bootstrap theme corrects */

.navbar-logo {
    max-height: 40px;
    margin-top: -11px;
}

.bottom-link {
    position: absolute;
    bottom: 15px;
}
.bottom-link.right {
    right: 15px;
}

.tile {
    width: 12em;
    height: 10em;
    margin-top: 1em;
    margin-right: 1em;
    position: relative;
}

.tileBorder {
    width: 100%;
    height: 100%;
    position: absolute;
    border: 0.1em solid #ededed;
}

.backgroundImage {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 0;
}

.transparentBackground {
    width: 100%;
    height: 20%;
    position: absolute;
    margin-top: 67%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;
}

.tileBorder:hover .transparentBackground {
    background-color: rgba(0, 100, 255, 0.7);
}

.linkText {
    width: 100%;
    height: 100%;
    position: absolute;
    color: white;
    padding-top: 69%;
    padding-left: 5%;
    overflow: hidden;
    text-overflow: ellipsis;
    z-index: 2;
}

.ecoreLink {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 3;
}

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

.btn-uuid {
    min-width: 21em;
}

paper-button {
    font-size: 14px;
    width: 150px;
    background: darkgray;
    color: black;
}

paper-button:hover {
    background: lightblue;
}

paper-button::shadow #ripple {
    color: #2a56c6;
}

.delete-list-item {
    float: right;
    z-index: 2;
    display: none;
    padding: 5px;
    position: relative;
}

.list-item-container:hover > .delete-list-item {
    display: block;
}

.validate-list-item {
    float: right;
    z-index: 2;
    display: none;
    padding: 5px;
    position: relative;
}

.list-item-container:hover > .validate-list-item {
    display: block;
}

.overlay-container {
    position: relative;
}

.overlay {
    z-index: 10;
    height: 100%;
    width: 100%;
    background-color: white;
    opacity: 0.85;
    display: flex;
    border-radius: 4px;
    position: absolute;
}

.overlay:before {
    font-family: 'Glyphicons Halflings';
    content: "\E033";
    position: relative;
    display: flex;
    font-style: normal;
    font-weight: normal;
    align-items: center;
    width: 100%;
    justify-content: center;
    font-size: 40px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

#edit-project .panel {
    margin-bottom: 0;
}

#edit-project .col-md-6 {
    padding: 0;
}

.no-margin {
    margin: 0;
}

#edit-project .panel-body:hover {
    background-color: #337ab7;
    color: #fff;
}

.alert {
    margin-top: 10px;
}

.validatorDropdown {
    display: inline-block;
}

